# weclawbot

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  index.html  partitions.csv  sdkconfig.defaults  sdkconfig.release.defaults
.github/workflows/: release.yml
docs/: agent-direct-control-protocol.md  agent-preview-delivery-discussion.md  architecture.md  byoa-reliability-analysis.md  cloud-agent-choice.md  cloud-agent.md  curator-api.md  curator-skill-runtime.md  current-progress.md  dynamic-scf-builder.md  file-processing.md  gap-event-implementation-plan.md  hardware.md  hermes-first-run-skill-review.md  layout-vm.md  model-selection.md  npm-distribution.md  official-site-firmware-sync.md  open-firmware-privacy-boundary.md  privacy-boundary.md  project-release-checklist.md  public-release-boundary.md  scf-build-deploy.md  self-evolving-architecture-discussion.md  serverless-first.md  site-experience-requirements.md  skill-system.md  usb-msc-product-disk.md
integrations/hermes/weclawbot-plugin/: README.md  SKILL.md  __init__.py  cli.py  mqtt_control.py  plugin.yaml  requirements.txt  tools.py
integrations/hermes/weclawbot-plugin/tests/: test_mqtt_codec.py
integrations/openclaw/weclawbot-openclaw-plugin/: README.md  index.mjs  openclaw.plugin.json  package-lock.json  package.json
integrations/openclaw/weclawbot-openclaw-plugin/lib/: activity.mjs  direct-control.mjs  mqtt-control.mjs  openclaw-preview.mjs  preview-manifest.mjs  screen-preview.mjs
integrations/openclaw/weclawbot-openclaw-plugin/skills/weclawbot-curator/: SKILL.md
integrations/openclaw/weclawbot-openclaw-plugin/systemd/: weclawbot-openclaw-curator.service
integrations/openclaw/weclawbot-openclaw-plugin/test/: activity.test.mjs  direct-control.test.mjs  mqtt-control.test.mjs  openclaw-preview-hook.test.mjs  preview-manifest.test.mjs  screen-preview.test.mjs
integrations/openclaw/weclawbot-openclaw-plugin/workspace/: AGENTS.md
main/: CMakeLists.txt  Kconfig.projbuild  agent_mqtt.cc  agent_mqtt.h  app_config.h  app_main.cc  battery_monitor.cc  battery_monitor.h  button_manager.cc  button_manager.h  button_wrapper.cc  button_wrapper.h  idf_component.yml  note_store.cc  note_store.h  red_block_pet.cc  red_block_pet.h  rlcd_display.cc  rlcd_display.h  serial_config.cc  serial_config.h  shtc3_sensor.cc  shtc3_sensor.h  ui.cc  ui.h  usb_product_disk.cc  usb_product_disk.h  wechat_bot.cc  wechat_bot.h  wifi_manager.cc  wifi_manager.h
runtime/: README.md  package-lock.json  package.json
runtime/eval/: sticky-core.jsonl
runtime/scripts/: package-scf.sh
runtime/src/: index.js
runtime/src/adapters/: tencent-scf.js
runtime/src/cli/: curate.mjs  eval.mjs  precipitate.mjs
runtime/src/models/: chat-curator.js  deepseek.js
runtime/src/runtime/: adapters.js  curator.js  langgraph-agent.js  model-router.js  precipitation.js  skill-library.js  validate.js
runtime/src/skills/: sticky-core.js
scripts/: device_log.py  idf.sh  prepare_web_firmware.sh  run_device_logger.sh  serve_web.py
web/: app.js  firmware-contract.json  index.html  manifest.json  style.css
